BuildHughes/translation-tool/inputs/source_meta/objects/HSvc_SpecialInstructions__c.object
<CustomObject>
    <fields>
        <fullName>HSvc_CaseType__c</fullName>
        <label>Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HSvc_CaseRecordType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Non-Technical</fullName>
                </value>
                <value>
                    <fullName>Product Support</fullName>
                </value>
                <value>
                    <fullName>Repair Field</fullName>
                </value>
                <value>
                    <fullName>Techician Support</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Repair Remote</fullName>
                </value>
                <value>
                    <fullName>Pre-install</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Retention</fullName>
                </value>
                <value>
                    <fullName>Pre-Sales</fullName>
                </value>
                <value>
                    <fullName>Relocation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Case_Reason_2__c</fullName>
        <label>Case Reason 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Case_Total_Open_Time__c</fullName>
        <label>Case Total Open Time</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Category_of_Red_Flag__c</fullName>
        <label>Category of Red Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Plan Approval</fullName>
                </value>
                <value>
                    <fullName>Competition Making Inroads into Account - DSL</fullName>
                </value>
                <value>
                    <fullName>Competition Making Inroads into Account - Wild Blue</fullName>
                </value>
                <value>
                    <fullName>Competition Making Inroads into Account - Wireless</fullName>
                </value>
                <value>
                    <fullName>Customer Care Problems - Billing</fullName>
                </value>
                <value>
                    <fullName>Customer Care Problems - Escalations</fullName>
                </value>
                <value>
                    <fullName>Dealer Event - Key City Approval Form</fullName>
                </value>
                <value>
                    <fullName>Distribution Problem (unable to get help from Distributor)</fullName>
                </value>
                <value>
                    <fullName>Financial Trouble</fullName>
                </value>
                <value>
                    <fullName>Installation Issues</fullName>
                </value>
                <value>
                    <fullName>Inventory Shortages/Product Shortages</fullName>
                </value>
                <value>
                    <fullName>Key City Approvals</fullName>
                </value>
                <value>
                    <fullName>Local Issue impacting Business</fullName>
                </value>
                <value>
                    <fullName>Losing a Key Contact</fullName>
                </value>
                <value>
                    <fullName>Marketing Issues</fullName>
                </value>
                <value>
                    <fullName>Marketing Materials</fullName>
                </value>
                <value>
                    <fullName>Ordering Tool Issues</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Password Reset</fullName>
                </value>
                <value>
                    <fullName>Payment Issues</fullName>
                </value>
                <value>
                    <fullName>Product Problems</fullName>
                </value>
                <value>
                    <fullName>Reoccuring Log In Problems</fullName>
                </value>
                <value>
                    <fullName>Service Problems</fullName>
                </value>
                <value>
                    <fullName>Shipment Problems</fullName>
                </value>
                <value>
                    <fullName>Staffing Issues</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Cause__c</fullName>
        <label>Cause</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Change_Post_mortem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Post-mortem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_Change_Type__c</fullName>
        <label>Change Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Emergency</fullName>
                </value>
                <value>
                    <fullName>Regular</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Change_Window_Duration__c</fullName>
        <label>Change Window Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSvc_Change_Window_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Window Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases4_spi</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_Chronic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chronic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_Company__c</fullName>
        <label>Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Completion_Note__c</fullName>
        <label>Completion Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HSvc_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Special_Instructions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_Count_towards_Contractual_SLA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Count towards Contractual SLA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_Country__c</fullName>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_CreatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CreatedBy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Special_Instructions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_Critical_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Critical Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_Current_Queue_Id__c</fullName>
        <label>Current Queue Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Customer_Requested__c</fullName>
        <label>Customer Requested</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NMD</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Customer_Type_Affected__c</fullName>
        <label>Customer Type Affected</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Shared</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Customers_Affected__c</fullName>
        <label>Customers Affected</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_Customers_Notified__c</fullName>
        <label>Customer(s) Notified?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Datetime_Stamp_for_Status_New__c</fullName>
        <label>Datetime Stamp for Status New</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_Detailed_Description_of_the_Task__c</fullName>
        <label>Detailed Description of the Task</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_Diagnosis__c</fullName>
        <label>Diagnosis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Dispatch_Instructions__c</fullName>
        <label>Dispatch Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_Documents_for_Approval__c</fullName>
        <label>Documents for Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Plan</fullName>
                </value>
                <value>
                    <fullName>Key City Funds</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Duration_Hours__c</fullName>
        <label>Duration Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSvc_Duration_New_min__c</fullName>
        <label>Duration - New (min)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSvc_Duty_Manager_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Duty Manager Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_EffectiveDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HSvc_Email_Sent_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Sent Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HSvc_Emergency_Policy_Definition__c</fullName>
        <label>Emergency Policy Definition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A change is required to repair an issue that is impacting service (or will impact service if not corrected)</fullName>
                </value>
                <value>
                    <fullName>A change is required to correct a security issue</fullName>
                </value>
                <value>
                    <fullName>Does not adhere to emergency change policy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Engineering_Assessment_of_Issue__c</fullName>
        <label>Engineering Assessment of Issue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_EventCode__c</fullName>
        <label>EventCode</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_EventCode_c__c</fullName>
        <label>EventCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Event_Details__c</fullName>
        <label>Event Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_Event_Post_Mortem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event Post Mortem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_ExpiryDate__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HSvc_Failed_QA_Reason__c</fullName>
        <label>Failed QA Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reproducible</fullName>
                </value>
                <value>
                    <fullName>Occasional</fullName>
                </value>
                <value>
                    <fullName>Rare</fullName>
                </value>
                <value>
                    <fullName>Constant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_HNSLocationId__c</fullName>
        <description>This field is used to store the location Id.</description>
        <label>HNS Location Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_HNSProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is mapped to the HNS Product object</description>
        <label>Product</label>
        <referenceTo>HNS_Products__c</referenceTo>
        <relationshipName>Special_Instructions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_HNS_Product_Line__c</fullName>
        <label>HNS Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>JUPITER 4</fullName>
                </value>
                <value>
                    <fullName>DIRECWAY</fullName>
                </value>
                <value>
                    <fullName>DPC/EE</fullName>
                </value>
                <value>
                    <fullName>ENS</fullName>
                </value>
                <value>
                    <fullName>GEMINI</fullName>
                </value>
                <value>
                    <fullName>HES</fullName>
                </value>
                <value>
                    <fullName>IPES</fullName>
                </value>
                <value>
                    <fullName>NNOC</fullName>
                </value>
                <value>
                    <fullName>PES</fullName>
                </value>
                <value>
                    <fullName>TES</fullName>
                </value>
                <value>
                    <fullName>TRES</fullName>
                </value>
                <value>
                    <fullName>UMOD</fullName>
                </value>
                <value>
                    <fullName>VSAT</fullName>
                </value>
                <value>
                    <fullName>GRDFGFDS</fullName>
                </value>
                <value>
                    <fullName>FDSAFSDA</fullName>
                </value>
                <value>
                    <fullName>ARBB7000</fullName>
                </value>
                <value>
                    <fullName>ARBB9000</fullName>
                </value>
                <value>
                    <fullName>ARCDPD</fullName>
                </value>
                <value>
                    <fullName>ARGMHTDMA</fullName>
                </value>
                <value>
                    <fullName>ARLLTDMA</fullName>
                </value>
                <value>
                    <fullName>ARWU</fullName>
                </value>
                <value>
                    <fullName>MSS</fullName>
                </value>
                <value>
                    <fullName>SWOPS</fullName>
                </value>
                <value>
                    <fullName>SPACEWAY</fullName>
                </value>
                <value>
                    <fullName>SPWY BYPAS</fullName>
                </value>
                <value>
                    <fullName>HN-HX SYSTEM</fullName>
                </value>
                <value>
                    <fullName>ARBB9400</fullName>
                </value>
                <value>
                    <fullName>ARBB9800</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Impact_Description__c</fullName>
        <label>Impact Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_Impact_Duration_Actual__c</fullName>
        <label>Impact Duration Actual</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_Impact_Duration_Forecast__c</fullName>
        <label>Impact Duration Forecast</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Impact__c</fullName>
        <label>Impact?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Implementation_Plan__c</fullName>
        <label>Implementation Plan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_Implementation_Results__c</fullName>
        <label>Implementation Results</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Outage</fullName>
                </value>
                <value>
                    <fullName>Degradation</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Implementer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1_spi</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_Implementing_Department__c</fullName>
        <label>Implementing Department</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_InstructionDetails__c</fullName>
        <label>Instruction Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_InstructionType__c</fullName>
        <label>Instruction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Special</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Case Closure Instructions</fullName>
                </value>
                <value>
                    <fullName>Customer Profile</fullName>
                </value>
                <value>
                    <fullName>Dispatch Note</fullName>
                </value>
                <value>
                    <fullName>Network Diagram</fullName>
                </value>
                <value>
                    <fullName>Network Infractions</fullName>
                </value>
                <value>
                    <fullName>To Do List</fullName>
                </value>
                <value>
                    <fullName>Red Text Message</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Internal_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases_spi</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_IsClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_Justification__c</fullName>
        <label>Justification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_KB_Exit_Code__c</fullName>
        <label>KB Exit Code</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Location_s__c</fullName>
        <label>Location(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AC313</fullName>
                </value>
                <value>
                    <fullName>AC315</fullName>
                </value>
                <value>
                    <fullName>AC367</fullName>
                </value>
                <value>
                    <fullName>ALB</fullName>
                </value>
                <value>
                    <fullName>ALBNM</fullName>
                </value>
                <value>
                    <fullName>AMA</fullName>
                </value>
                <value>
                    <fullName>AMATX</fullName>
                </value>
                <value>
                    <fullName>B125</fullName>
                </value>
                <value>
                    <fullName>BENOR</fullName>
                </value>
                <value>
                    <fullName>BIL</fullName>
                </value>
                <value>
                    <fullName>BIS</fullName>
                </value>
                <value>
                    <fullName>BOI</fullName>
                </value>
                <value>
                    <fullName>BOIID</fullName>
                </value>
                <value>
                    <fullName>CASWY</fullName>
                </value>
                <value>
                    <fullName>CEDIA</fullName>
                </value>
                <value>
                    <fullName>DET</fullName>
                </value>
                <value>
                    <fullName>DETMI</fullName>
                </value>
                <value>
                    <fullName>EDM</fullName>
                </value>
                <value>
                    <fullName>ELP</fullName>
                </value>
                <value>
                    <fullName>ENG</fullName>
                </value>
                <value>
                    <fullName>ENGCO</fullName>
                </value>
                <value>
                    <fullName>EUGOR</fullName>
                </value>
                <value>
                    <fullName>FLG</fullName>
                </value>
                <value>
                    <fullName>GRJ</fullName>
                </value>
                <value>
                    <fullName>GTN</fullName>
                </value>
                <value>
                    <fullName>GTNMD</fullName>
                </value>
                <value>
                    <fullName>MIDTX</fullName>
                </value>
                <value>
                    <fullName>MIS</fullName>
                </value>
                <value>
                    <fullName>MISMT</fullName>
                </value>
                <value>
                    <fullName>NLV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_No_of_Sites_Affected__c</fullName>
        <label>No. of Sites Affected</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>HSvc_Non_Available_Hours__c</fullName>
        <label>Non Available Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSvc_Notification_Sent__c</fullName>
        <label>Notification Sent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Number_Of_Child_Cases__c</fullName>
        <label>Number Of Child Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSvc_OnHold_Reason__c</fullName>
        <label>OnHold Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_Outage_Covered_Hours__c</fullName>
        <label>Outage Covered Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSvc_Outage_Hours__c</fullName>
        <label>Outage Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSvc_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Special_Instructions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_Platform_Affected__c</fullName>
        <label>Platform Affected</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACP</fullName>
                </value>
                <value>
                    <fullName>CAC-PC-UEM</fullName>
                </value>
                <value>
                    <fullName>DIRECWAY 7000_TU</fullName>
                </value>
                <value>
                    <fullName>DNCC</fullName>
                </value>
                <value>
                    <fullName>DVBSGW</fullName>
                </value>
                <value>
                    <fullName>IP Gateway</fullName>
                </value>
                <value>
                    <fullName>Management Gateway Client</fullName>
                </value>
                <value>
                    <fullName>QMPC</fullName>
                </value>
                <value>
                    <fullName>Return Channel CP</fullName>
                </value>
                <value>
                    <fullName>Serial Gateway</fullName>
                </value>
                <value>
                    <fullName>Special Services Gateway</fullName>
                </value>
                <value>
                    <fullName>TurboPage Server</fullName>
                </value>
                <value>
                    <fullName>VISION-PC-UEM</fullName>
                </value>
                <value>
                    <fullName>UBB HN Router</fullName>
                </value>
                <value>
                    <fullName>UBB IP Gateway</fullName>
                </value>
                <value>
                    <fullName>UBB Vision-PC-UEM</fullName>
                </value>
                <value>
                    <fullName>CDS</fullName>
                </value>
                <value>
                    <fullName>DIRECWAY 4010</fullName>
                </value>
                <value>
                    <fullName>DIRECWAY 4020</fullName>
                </value>
                <value>
                    <fullName>DIRECWAY 4030</fullName>
                </value>
                <value>
                    <fullName>DIRECWAY 6000</fullName>
                </value>
                <value>
                    <fullName>DIRECWAY 7000</fullName>
                </value>
                <value>
                    <fullName>DIRECWAY 7700</fullName>
                </value>
                <value>
                    <fullName>DIRECWAY 7740</fullName>
                </value>
                <value>
                    <fullName>HN 7000</fullName>
                </value>
                <value>
                    <fullName>HN 7000S</fullName>
                </value>
                <value>
                    <fullName>HN 7700S</fullName>
                </value>
                <value>
                    <fullName>HN9400</fullName>
                </value>
                <value>
                    <fullName>HN9200</fullName>
                </value>
                <value>
                    <fullName>HN92600</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Primary_Contact_Email__c</fullName>
        <label>Primary Contact Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Primary_Contact_Name__c</fullName>
        <label>Primary Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Primary_Contact_Phone__c</fullName>
        <label>Primary Contact Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>